--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,23 @@ body, html {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
+ul { 
+    list-style: disc;
+    padding-left: 5px; 
+    margin-left: 20px;
+    text-align: justify;
+}
+li {
+    margin-bottom: 5px;
+    text-align: justify;
+}
+a {
+    color:blue;
+    text-decoration: none;
+}
+p {
+    text-align: left;
+}
 .bar {
     background-color: #f9f9fb;
     padding:15px;
@@ -34,5 +49,10 @@ a { color:blue; text-decoration: none;}
     border-right: solid 1px #cdcdcd;
 }
 figure {
+    text-align: center;
+}
+footer p {
+    font-size: 0.8rem;
+    color: #555555;
     text-align: center;
 }
